--- a/index.html
+++ b/index.html
@@ -1114,19 +1114,6 @@
                                         <p>We are students from Delhi Technological University and in these difficult times we understand how it is difficult to cope up with different kinds of emotions a student is going through. To help and guide them through this new normal, we're here as saviours</p>
                                     </div>
 
-                                    <ul class="social-icon-one social-icon-colored">
-
-                                        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-
-                                        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-
-                                        <li><a href="#"><i class="fab fa-pinterest"></i></a></li>
-
-                                        <li><a href="#"><i class="fab fa-youtube"></i></a></li>
-
-                                        <li><a href="#"><i class="fab fa-dribbble"></i></a></li>
-
-                                    </ul>
 
                                 </div>
 
@@ -1184,6 +1171,14 @@
 
                                             </li>
 
+                                            <li>
+
+                                                <span class="icon flaticon-paper-plane"></span>
+
+                                                <div class="text"><a href="talkwithmequery@gmail.com">talkwithmequery@gmail.com</a></div>
+
+                                            </li>
+
 
 
 
@@ -1192,7 +1187,7 @@
 
                                                 <span class="icon flaticon-worldwide"></span>
 
-                                                <div class="text">Delhi Technological University, New Delhi</div>
+                                                <div class="text">Talk With Me, Delhi</div>
 
                                             </li>
 
