--- a/index.html
+++ b/index.html
@@ -1175,7 +1175,7 @@
 
                                                 <span class="icon flaticon-paper-plane"></span>
 
-                                                <div class="text"><a href="talkwithmequery@gmail.com">talkwithmequery@gmail.com</a></div>
+                                                <div class="text"><a href="#">talkwithmequery@gmail.com</a></div>
 
                                             </li>
 
