--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 
                         </ul>
 
-                        <div class="btn-box"><a href="buy-ticket.html" class="theme-btn btn-style-two"><span class="btn-title">Book Now</span></a></div>
+                        <div class="btn-box"><a href="#2" class="theme-btn btn-style-two"><span class="btn-title">Book Now</span></a></div>
 
                     </div>  
 
@@ -374,7 +374,7 @@
 
                         <div class="icon-box"><span class="icon flaticon-lecture"></span></div>
 
-                        <h4><a href="about.html">Experience</a></h4>
+                        <h4><a href="#">Experience</a></h4>
 
                         <div class="text">We have a team which have a vast experience in different fields</div>
 
@@ -392,7 +392,7 @@
 
                         <div class="icon-box"><span class="icon flaticon-search"></span></div>
 
-                        <h4><a href="about.html">Researched</a></h4>
+                        <h4><a href="#">Researched</a></h4>
 
                         <div class="text">We do focus on Research and Development before taking any step</div>
 
@@ -410,7 +410,7 @@
 
                         <div class="icon-box"><span class="icon flaticon-diamond-1"></span></div>
 
-                        <h4><a href="about.html">Networking</a></h4>
+                        <h4><a href="#">Networking</a></h4>
 
                         <div class="text">We do have vast reach to provide you with the best</div>
 
@@ -428,7 +428,7 @@
 
                         <div class="icon-box"><span class="icon flaticon-success"></span></div>
 
-                        <h4><a href="about.html">Team</a></h4>
+                        <h4><a href="#">Team</a></h4>
 
                         <div class="text">We believe in teamwork and that is our ultimate strength</div>
 
@@ -446,7 +446,7 @@
 
                         <div class="icon-box"><span class="icon flaticon-employee"></span></div>
 
-                        <h4><a href="about.html">Support</a></h4>
+                        <h4><a href="#">Support</a></h4>
 
                         <div class="text">Any personal issues? We have got those also covered</div>
 
@@ -682,7 +682,7 @@
                                         <div class="date"></div>
 
 
-                                        <h4><a href="event-detail.html">The struggle continues...</a></h4>
+                                        <h4><a href="#">The struggle continues...</a></h4>
 
                                         <div class="text">Doing major projects for building profile <br> CV building workshops <br></div>
 
@@ -816,7 +816,7 @@
 
         <div class="outer-box">
 
-            <div class="time-counter"><div class="time-countdown clearfix" data-countdown="12/20/2020"></div></div>
+            <div class="time-counter"><div class="time-countdown clearfix" data-countdown="12/19/2020 14:30:00"></div></div>
            <h1 style="color: white;"><b>Hurry Up! Upto <span style="color: tomato;">50% off!</span> on our packages</b></h1>
         </div>
 
