--- a/index.html
+++ b/index.html
@@ -846,7 +846,7 @@
 
                             <div class="price-box">
 
-                                <div class="title">Basic</div>
+                                <div class="title">Basic 1 year plan</div>
                                 <h4 class="price" style="text-decoration: line-through; color: tomato;">Rs.2000</h4>
 
                                 <h4 class="price">Rs.1000</h4>
@@ -900,7 +900,7 @@
 
                             <div class="price-box">
 
-                                <div class="title">Premium</div>
+                                <div class="title">Premium 2 year plan</div>
 
                                 <h4 class="price" style="text-decoration: line-through; color: tomato;">Rs.3000</h4>
 
